--- a/index.html
+++ b/index.html
@@ -48,11 +48,26 @@
       border-radius: 25px;
       font-size: 14px;
     }
+    .login-btn:hover{
+      width: 250px;
+      height: 35px;
+      margin-top: 10px;
+      background-color: white;
+      color: white;
+      border: none;
+      border-radius: 25px;
+      font-size: 14px;
+    }
 
     .forgot {
       font-size: 12px;
       margin-top: 10px;
       color: #dceaff;
+    }
+    .forgot:hover {
+      font-size: 12px;
+      margin-top: 10px;
+      color: blue;
     }
   </style>
 </head>
@@ -64,6 +79,6 @@
   <input type="password" placeholder="Password" class="input-field">
 
   <button class="login-btn">Login</button>
-  <div class="forgot">Forgot Username / Password?</div>
+  <button class="forgot">Forgot Username / Password?</div>
 </body>
 </html>
