--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       height: 35px;
       margin-top: 10px;
       background-color: white;
-      color: white;
+      color: black;
       border: none;
       border-radius: 25px;
       font-size: 14px;
@@ -67,7 +67,8 @@
     .forgot:hover {
       font-size: 12px;
       margin-top: 10px;
-      color: blue;
+      color: white;
+      background-color: black;
     }
   </style>
 </head>
