--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     .forgot {
       font-size: 12px;
       margin-top: 10px;
-      color: #dceaff;
+      color: black;
     }
     .forgot:hover {
       font-size: 12px;
